--- a/development/dockerfiles/Dockerfile.python
+++ b/development/dockerfiles/Dockerfile.python
@@ -7,8 +7,9 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
-COPY . .
+COPY ./pyproject.toml ./pyproject.toml
 RUN pip install uv && uv sync
 # --locked --no-dev
+COPY . .
 
 CMD ["/home/ishocon/webapp/python/.venv/bin/gunicorn", "--bind", "0.0.0.0:8080"]
