--- a/webapp/python/pyproject.toml
+++ b/webapp/python/pyproject.toml
@@ -10,7 +10,10 @@ dependencies = [
     "pymysql[rsa]>=1.1.1",
     "python-ulid>=3.0.0",
     "sqlalchemy>=2.0.36",
+    "pillow>=11.0.0",
     "python-ulid>=3.0.0",
+    "python-multipart>=0.0.20",
+    "qrcode>=8.0",
     "urllib3>=2.2.3",
     "uvicorn-worker>=0.2.0",
 ]
