--- a/development/compose-python.yml
+++ b/development/compose-python.yml
@@ -26,6 +26,8 @@ services:
       #   condition: service_healthy
     environment:
       ISHOCON_DB_HOST: db
+      ISHOCON_PAYMENT_HOST: payment_app
+      ISHOCON_PAYMENT_PORT: 8080
     extra_hosts:
       - "host.docker.internal:host-gateway"
   payment_app:
@@ -35,9 +37,9 @@ services:
     image: payment-app
     ports:
       - "8081:8080"
-    # healthcheck:
-    #   test: curl -f http://localhost:8080/healthz || exit 1
-    #   start_period: 5s
+    healthcheck:
+      test: "curl -f http://localhost:8080/healthz || exit 1"
+      start_period: 5s
   db:
     image: public.ecr.aws/docker/library/mysql:8
     environment:
