--- a/webapp/python/pyproject.toml
+++ b/webapp/python/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-ulid>=3.0.0",
     "python-multipart>=0.0.20",
     "qrcode>=8.0",
+    "requests>=2.31.0",
     "urllib3>=2.2.3",
     "uvicorn-worker>=0.2.0",
 ]
