Redisをつかって空席を管理 score=2570 total_sales=257000 total_refunds=0 net_revenue=257000 total_tickets=143 ticket_phase=5/5 sales_phase=5/7

--- a/webapp/python/pyproject.toml
+++ b/webapp/python/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "requests>=2.31.0",
     "urllib3>=2.2.3",
     "uvicorn-worker>=0.2.0",
+    "redis>=6.0.0",
 ]
 
 [tool.ruff]
