--- a/contest/ami/conf/nginx_app.conf
+++ b/contest/ami/conf/nginx_app.conf
@@ -3,9 +3,12 @@ server {
 
   client_max_body_size 10m;
   root /home/ishocon/webapp/public/;
+  index index.html;
+
   location / {
     try_files $uri /index.html;
   }
+
   location /api/ {
     proxy_set_header Host $host;
     proxy_pass http://localhost:8080;
