--- a/contest/terraform/Taskfile.yml
+++ b/contest/terraform/Taskfile.yml
@@ -10,12 +10,14 @@ tasks:
     desc: Close the scoreboard (require AWS IAM authentication)
     cmds:
       - aws apigatewayv2 update-route --api-id $(terraform output -raw api_gateway_id) --route-id $(terraform output -raw api_gateway_get_route_id) --authorization-type AWS_IAM > /dev/null
+      - curl -X "POST" "$(terraform output -raw apigateway_url)scoreboard/closed_at"
       - echo "Scoreboard is closed."
 
   reopen-scoreboard:
     desc: Reopen the scoreboard (remove authentication)
     cmds:
       - aws apigatewayv2 update-route --api-id $(terraform output -raw api_gateway_id) --route-id $(terraform output -raw api_gateway_get_route_id) --authorization-type NONE > /dev/null
+      - curl -X "DELETE" "$(terraform output -raw apigateway_url)scoreboard/closed_at"
       - echo "Scoreboard is reopened."
 
   freeze-scoreboard:
