Migrate ehnancements to Ruby

--- a/webapp/ruby/Gemfile
+++ b/webapp/ruby/Gemfile
@@ -11,6 +11,7 @@ gem 'chunky_png', '~> 1.4'
 gem 'mysql2', '~> 0.5.7'
 gem 'puma', '~> 7.1'
 gem 'rackup', '~> 2.2'
+gem 'redis', '~> 5.3'
 gem 'rqrcode', '~> 3.1'
 gem 'sinatra', '~> 4.2'
 gem 'sinatra-activerecord', '~> 2.0'
